--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "lib/"
   ],
   "scripts": {
-    "lint": "eslint .",
-    "test": "npm run lint && nyc mocha",
+    "test": "nyc mocha",
     "coverage": "npm run test && nyc report --reporter html",
     "report-coveralls": "nyc --reporter=lcov mocha"
   },
@@ -35,12 +34,8 @@
     "timeout": 5000
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
-    "needle": "^2.5.2",
-    "stream-parser": "~0.3.1"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0"
   }
